--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,11 +1,6 @@
 ---
 layout: default
 ---
-<article class="post">
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-  <div class="post-content">
-    {{ content }}
-  </div>
-</article>
+
+<h2 class="article__title article__title--single">{{ page.title }}</h2>
+{{ content }}
