--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,11 +13,13 @@
     {% endif %}
 
     <nav class="header__nav" role="navigation">      
-      <a href="{{ site.baseurl }}/archive/" class="header__link">Archive</a>
+      <a href="{{ site.baseurl }}/archive/" class="header__link">文章</a>
+      <!--
       <a href="http://twitter.com/{{ site.twitter_username }}" class="header__link" target="_blank">Twitter</a>
-      <!-- <a href="http://github.com/{{ site.github_username }}" class="header__link" target="_blank">Github</a> -->
+      <a href="http://github.com/{{ site.github_username }}" class="header__link" target="_blank">Github</a> 
       <a href="http://facebook.com/{{ site.facebook_username }}" class="header__link" target="_blank">Facebook</a>
-      <a href="{{ site.baseurl }}/about/" class="header__link">About</a>
+      -->
+      <a href="{{ site.baseurl }}/about/" class="header__link">关于</a>
     </nav>
   </header>
 
