--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html lang="en">
+<style type="text/css">
+        .footer{position:absolute;bottom:0;width:100%;height:100px;}
+    </style>
 {% include head.html %}
 <body>
 
