--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,35 @@
 <!doctype html>
 <html lang="en">
-<style type="text/css">
-        .footer{position:absolute;bottom:0;width:100%;height:100px;}
+<head>
+    <style type="text/css">
+      html,body{margin:0;padding: 0;}
+      .header{background-color: #ffe4c4;}
+      .main{background-color: #bdb76b;}
+      .footer{background-color: #ffc0cb;}
+
+      /* 动态为footer添加类fixed-bottom */
+      .fixed-bottom {position: fixed;bottom: 0;width:100%;}
     </style>
+
+    <script src="http://libs.baidu.com/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript">
+      $(function(){
+          function footerPosition(){
+              $("footer").removeClass("fixed-bottom");
+              var contentHeight = document.body.scrollHeight,//网页正文全文高度
+                  winHeight = window.innerHeight;//可视窗口高度，不包括浏览器顶部工具栏
+              if(!(contentHeight > winHeight)){
+                  //当网页正文高度小于可视窗口高度时，为footer添加类fixed-bottom
+                  $("footer").addClass("fixed-bottom");
+              } else {
+                  $("footer").removeClass("fixed-bottom");
+              }
+          }
+          footerPosition();
+          $(window).resize(footerPosition);
+      });
+    </script>
+ </head>
 {% include head.html %}
 <body>
 
