--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,31 @@
 <!doctype html>
 <html lang="en">
-
+<style>
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing:border-box;
+    }
+    html,body { height: 100%;}
+    header { 
+        height: 60px; 
+        margin-bottom: -60px; 
+        background: #1381cc; 
+        color: #FFF; 
+        position: relative;
+    }
+    section { 
+        background: #fff; 
+        min-height: 100%; 
+        padding: 60px 0 60px;}
+    footer { 
+        height:60px; 
+        margin-top: -60px; 
+        background: #0c4367; 
+        color: #FFF;
+    }
+    
+</style>
 {% include head.html %}
 <body>
 
