--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
       <a href="http://facebook.com/{{ site.facebook_username }}" class="header__link" target="_blank">Facebook</a>
       -->
       <a href="http://github.com/{{ site.github_username }}" class="header__link" target="_blank">Github</a> 
-      <a href="http://github.com/{{ site.github_username }}" class="header__link" target="_blank">新浪博客</a> 
+      <a href="http://blog.sina.com.cn/{{ site.github_username }}" class="header__link" target="_blank">新浪博客</a> 
       <a href="{{ site.baseurl }}/about/" class="header__link">关于</a>
     </nav>
   </header>
