--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,18 @@
 <!doctype html>
 <html lang="en">
+<style type="text/css">
+.container{position:relative;width:100%;min-height:100%;}
+.body{padding-bottom:50px;}
+.footer{height:50px;position:fixed;bottom:0px;left:0px;}
+</style>>
 
 {% include head.html %}
-<body>
 
+<div class="container">
 {% include header.html %}
-
+<body>
 {{ content }}
-
-{% include footer.html %}
-<!--
-<script type="text/javascript">
-  //友盟统计
-  var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-  document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_1260641879'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1260641879' type='text/javascript'%3E%3C/script%3E"));
-</script>
--->
 </body>
+{% include footer.html %}
+</div>
 </html>
