--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <style type="text/css">
 .container{position:relative;width:100%;min-height:100%;}
 .body{padding-bottom:50px;}
-.footer{height:50px;position:fixed;bottom:0px;left:0px;}
+.footer{height:50px;position:absolute;bottom:0px;left:0px;}
 </style>>
 
 {% include head.html %}
