--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html lang="en">
 <style type="text/css">
+
 .container{position:relative;width:100%;min-height:100%;}
 .body{padding-bottom:50px;}
-.footer{height:50px;position:absolute;bottom:0px;left:0px;}
+.footer{height:50px;position:fixed;bottom:0px;left:0px;right: 0;}
+
 </style>>
 
 {% include head.html %}
