--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 .body{padding-bottom:50px;}
 .footer{height:25px;position:fixed;bottom:0px;left:0px;right: 0;}
 
-</style>>
+</style>
 
 {% include head.html %}
 
