--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
     <nav class="header__nav" role="navigation">  <!--    
       <a href="{{ site.baseurl }}/archive/" class="header__link">文章</a>
       -->
-      <a href="{{ site.baseurl }}" class="header__link">文章</a>
+      <a href="{{ site.baseurl }}/index.html" class="header__link">文章</a>
       <!--
       <a href="http://twitter.com/{{ site.twitter_username }}" class="header__link" target="_blank">Twitter</a>
       <a href="http://github.com/{{ site.github_username }}" class="header__link" target="_blank">Github</a> 
