--- a/_layouts/ab.html
+++ b/_layouts/ab.html
@@ -1,11 +1,19 @@
 <!doctype html>
 <html lang="en">
+<style type="text/css">
 
+.container{position:relative;width:100%;min-height:100%;}
+.body{padding-bottom:25px;}
+.footer{height:25px;position:fixed;bottom:0px;left:0px;right: 0;}
+
+</style>
 {% include head.html %}
 
+<div class="container">
 {% include header.html %}
 <body>
 {{ content }}
 </body>
 {% include footer.html %}
+</div>
 </html>
