--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
+<!--
 <!doctype html>
 <html lang="en">
-<!--
+
 <style type="text/css">
 
 .container{position:relative;width:100%;min-height:100%;}
@@ -8,17 +9,7 @@
 .footer{height:25px;position:fixed;bottom:0px;left:0px;right: 0;}
 
 </style>
--->
 
-{% include head.html %}
-{% include header.html %}
-<body>
-{{ content }}
-</body>
-{% include footer.html %}
-
-
-<!--
 <div class="container">
 {% include header.html %}
 <body>
@@ -26,5 +17,19 @@
 </body>
 {% include footer.html %}
 </div>
+
+</html>
 -->
+<!doctype html>
+<html lang="en">
+{% include head.html %}
+<body>
+
+{% include header.html %}
+
+{{ content }}
+
+{% include footer.html %}
+
+</body>
 </html>
