--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 .footer{height:25px;position:fixed;bottom:0px;left:0px;right: 0;}
 
 </style>
-
+{% include head.html %}
 <div class="container">
 {% include header.html %}
 <body>
